<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E2020"
    tools:context=".DrinksActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#0C0C0C"
        android:contentDescription="@string/description"
        android:visibility="visible"
        app:srcCompat="@drawable/coffe2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="152dp"
        android:layout_height="30dp"
        android:text="@string/latte"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="240dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="376dp"
        android:layout_height="103dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/this_is_latte_caffe_latte_is_a_coffee_drink_which_is_made_with_espresso_and_steamed_milk"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="286dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_now"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:backgroundTint="#982A2A"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="495dp"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>